--- a/lqmc/rfs_for_gps_regression.ipynb
+++ b/lqmc/rfs_for_gps_regression.ipynb
@@ -50,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.chdir('/homes/ir337/Documents/learnable_qmc/small_datasets')         #path to dataset directory\n",
+    "os.chdir('/path/to/dataset/dir')         #path to dataset directory\n",
     "\n",
     "if dataset == 'abalone':\n",
     "    abalone_data = pd.read_csv('abalone.data', delimiter=\",\")\n",
